--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ build
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# build and gradle files
+.gradle
+build
+.idea
